Fixed DungeonLevel2 Spawn

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,8 +136,8 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/NEW_DungeonLevel_TEST
-MRUItem1=/Game/Tanner/Levels/MainMenuLevel
-MRUItem2=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem2=/Game/Tanner/Levels/MainMenuLevel
 MRUItem3=/Game/MedievalDungeon/Maps/DungeonLevel2
 MRUItem4=/Game/DungeonTESTLevel1
 MRUItem5=/Game/DungeonLevel_MAZE_ADDED
@@ -146,7 +146,7 @@ MRUItem5=/Game/DungeonLevel_MAZE_ADDED
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/Levels
 ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/Consumables
 ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Blueprints/BP_GREEN
-ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Maps
 None=======
 None=======
 None=======
@@ -183,7 +183,7 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game/KeystoneThirdPerson/Blueprints/HUD
+ContentBrowserTab2.SelectedPaths=/Game
 ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
@@ -229,29 +229,30 @@ None=======
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/ControlsWidget.ControlsWidget
+OpenAssetsAtExit=/Game/MedievalDungeon/Blueprints/BP_EndLevel.BP_EndLevel
+OpenAssetsAtExit=/Game/Player.Player
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Tanner/MainMenu/Widgets/ControlsWidget
-MRUItem1=/Game/Tanner/MainMenu/Widgets/SaveWidget
-MRUItem2=/Game/Tanner/Pause_Menu/PauseMenuWidget
-MRUItem3=/Game/Player
-MRUItem4=/Game/KeystoneThirdPerson/Blueprints/HUD/YouWin
-MRUItem5=/Game/MedievalDungeon/Blueprints/WIN
-MRUItem6=/Game/NEW_DungeonLevel_TEST
-MRUItem7=/Game/Tanner/MainMenu/Widgets/CreditWidget
-MRUItem8=/Game/Tanner/Levels/MainMenuLevel
-MRUItem9=/Game/Evan/KeystoneImport/Dragonslayer
-MRUItem10=/Game/Humza/SkeletonNoArmor/SkeletonEnemy
-MRUItem11=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem12=/Game/InventorySystem/Consumables/StaminaRegePotion
-MRUItem13=/Game/InventorySystem/Consumables/TalentToken
-MRUItem14=/Game/InventorySystem/Consumables/HealthPotion
-MRUItem15=/Game/MedievalDungeon/Maps/DungeonLevel2
-MRUItem16=/Game/Alexis/AI/EnemyAiAttacks/Task/Attack1BTtask
-MRUItem17=/Game/Alexis/AI/KnightBT
-MRUItem18=/Game/Alexis/AI/KnightAI_BP
-MRUItem19=/Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance
+MRUItem0=/Game/NEW_DungeonLevel_TEST
+MRUItem1=/Game/Player
+MRUItem2=/Game/MedievalDungeon/Blueprints/BP_EndLevel
+MRUItem3=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem4=/Game/Tanner/MainMenu/Widgets/ControlsWidget
+MRUItem5=/Game/Tanner/MainMenu/Widgets/SaveWidget
+MRUItem6=/Game/Tanner/Pause_Menu/PauseMenuWidget
+MRUItem7=/Game/KeystoneThirdPerson/Blueprints/HUD/YouWin
+MRUItem8=/Game/MedievalDungeon/Blueprints/WIN
+MRUItem9=/Game/Tanner/MainMenu/Widgets/CreditWidget
+MRUItem10=/Game/Tanner/Levels/MainMenuLevel
+MRUItem11=/Game/Evan/KeystoneImport/Dragonslayer
+MRUItem12=/Game/Humza/SkeletonNoArmor/SkeletonEnemy
+MRUItem13=/Game/InventorySystem/Consumables/StaminaRegePotion
+MRUItem14=/Game/InventorySystem/Consumables/TalentToken
+MRUItem15=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem16=/Game/MedievalDungeon/Maps/DungeonLevel2
+MRUItem17=/Game/Alexis/AI/EnemyAiAttacks/Task/Attack1BTtask
+MRUItem18=/Game/Alexis/AI/KnightBT
+MRUItem19=/Game/Alexis/AI/KnightAI_BP
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -2079,8 +2080,10 @@ YouWin_C.Accessibility=True
 YouWin_C.Clipping=True
 YouWin_C.Navigation=True
 YouWin_C.Localization=True
+BP_EndLevel_C.Tick=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/MedievalDungeon/Blueprints/BP_EndLevel.BP_EndLevel;
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/WIN.WIN;
 RecentlyPlaced=/Game/Player.Player;
 RecentlyPlaced=/Game/AncientTreasures/Meshes/SM_Helmet_01a.SM_Helmet_01a;
@@ -2100,7 +2103,6 @@ RecentlyPlaced=/Game/AncientTreasures/Meshes/SM_Chalice_02b.SM_Chalice_02b;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Torture_Chair.SM_Torture_Chair;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Table.SM_Table;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/AncientTreasures/Meshes/SM_CoinMaterial_01e.SM_CoinMaterial_01e;
 None=======
 None=======
 None=======
@@ -2309,7 +2311,7 @@ InventoryInst_C="\"Object.InventoryData\" "
 GameInstance="\"Object.SeveragGameInst\" "
 GameInstance="\"Object.HasDragonSword\" "
 Object="\"Object.SeveragGameInst\" "
-Object="\"Object.Appearance.Font\" "
+Object=
 None=======
 None=======
 None=======
@@ -2427,7 +2429,7 @@ AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Percept
 PointLight="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
 Light="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
 SphereComponent=
-Dragonslayer_C="\"Object.HasDragonSlayer\" "
+Dragonslayer_C=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
@@ -3545,14 +3547,16 @@ BP_Door_Single_Key_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGe
 BP_Door_Collectables_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,SphereComponent.Collision.Collision,
 Brush=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 InventoryComponent_C=
-BP_EndLevel_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
+BP_EndLevel_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,
 PostProcessVolume=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,
 BP_Chandalier_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,
 BP_FireCoals_01a_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 BP_CandleStick_Iron_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,
 SphereComponent=SphereComponent.Collision.Collision,
-Dragonslayer_C=
+Dragonslayer_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 YouWin_C=
+BP_Crypt_Doorway_C=CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,
+WIN_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 
 [SelectionDetails]
 PreserveScaleRatio=True
