cleaned up folders

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -232,26 +232,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Alexis/ThirdPersonBP/Blueprints/uihealthbar
-MRUItem1=/Game/Alexis/ThirdPersonBP/Ai/Animations/JumpAttack4UE4
-MRUItem2=/Game/Cemetery_VOL1/Meshes/SM_Cemetary_Gates_01c
-MRUItem3=/Game/Cemetery_VOL1/Meshes/SM_Cemetary_Gates_01f
-MRUItem4=/Game/Cemetery_VOL1/Meshes/SM_Cemetary_Gates_01g
-MRUItem5=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem6=/Game/Maps/Dummy
-MRUItem7=/Game/Tanner/Levels/MainMenuLevel
-MRUItem8=/Game/Alexis/AI/EnemyAiAttacks/Task/stanceChange
-MRUItem9=/Game/Alexis/AI/KnightBT
-MRUItem10=/Game/Alexis/AI/KnightAI_BP
-MRUItem11=/Game/NEW_DungeonLevel_TEST
-MRUItem12=/Game/Player
-MRUItem13=/Game/MedievalDungeon/Blueprints/BP_EndLevel
-MRUItem14=/Game/Tanner/MainMenu/Widgets/ControlsWidget
-MRUItem15=/Game/Tanner/MainMenu/Widgets/SaveWidget
-MRUItem16=/Game/Tanner/Pause_Menu/PauseMenuWidget
-MRUItem17=/Game/KeystoneThirdPerson/Blueprints/HUD/YouWin
-MRUItem18=/Game/MedievalDungeon/Blueprints/WIN
-MRUItem19=/Game/Tanner/MainMenu/Widgets/CreditWidget
+MRUItem0=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem1=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_flyNormal
+MRUItem2=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_falling
+MRUItem3=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_deathHitTheGround
+MRUItem4=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_ClawsAttack2HitComboForward_RM
+MRUItem5=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_biteGrabThrow
+MRUItem6=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_ClawsAttack2HitComboForward
+MRUItem7=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_bite
+MRUItem8=/Game/Alexis/ThirdPersonBP/Blueprints/uihealthbar
+MRUItem9=/Game/Alexis/ThirdPersonBP/Ai/Animations/JumpAttack4UE4
+MRUItem10=/Game/Cemetery_VOL1/Meshes/SM_Cemetary_Gates_01c
+MRUItem11=/Game/Cemetery_VOL1/Meshes/SM_Cemetary_Gates_01f
+MRUItem12=/Game/Cemetery_VOL1/Meshes/SM_Cemetary_Gates_01g
+MRUItem13=/Game/Maps/Dummy
+MRUItem14=/Game/Tanner/Levels/MainMenuLevel
+MRUItem15=/Game/Alexis/AI/EnemyAiAttacks/Task/stanceChange
+MRUItem16=/Game/Alexis/AI/KnightBT
+MRUItem17=/Game/Alexis/AI/KnightAI_BP
+MRUItem18=/Game/NEW_DungeonLevel_TEST
+MRUItem19=/Game/Player
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -2300,6 +2300,13 @@ None=======
 /Game/Cemetery_VOL1/Meshes/SM_Cemetary_Gates_01f.SM_Cemetary_Gates_01f=1
 /Game/Cemetery_VOL1/Meshes/SM_Cemetary_Gates_01g.SM_Cemetary_Gates_01g=1
 /Game/Alexis/ThirdPersonBP/Blueprints/uihealthbar.uihealthbar=1
+/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_biteGrabThrow.ANIM_MOUNTAIN_DRAGON_biteGrabThrow=1
+/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_bite.ANIM_MOUNTAIN_DRAGON_bite=1
+/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_ClawsAttack2HitComboForward.ANIM_MOUNTAIN_DRAGON_ClawsAttack2HitComboForward=1
+/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_ClawsAttack2HitComboForward_RM.ANIM_MOUNTAIN_DRAGON_ClawsAttack2HitComboForward_RM=1
+/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_deathHitTheGround.ANIM_MOUNTAIN_DRAGON_deathHitTheGround=1
+/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_falling.ANIM_MOUNTAIN_DRAGON_falling=1
+/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_flyNormal.ANIM_MOUNTAIN_DRAGON_flyNormal=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2346,7 +2353,7 @@ InventoryInst_C="\"Object.InventoryData\" "
 GameInstance="\"Object.SeveragGameInst\" "
 GameInstance="\"Object.HasDragonSword\" "
 Object="\"Object.SeveragGameInst\" "
-Object=
+Object="\"Object.SkeletalMeshes\" "
 None=======
 None=======
 None=======
@@ -2486,7 +2493,7 @@ Texture2D.Compression=True
 
 [RootWindow]
 ScreenPosition=X=294.400 Y=134.400
-WindowSize=X=1321.600 Y=761.600
+WindowSize=X=1323.200 Y=763.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2512,7 +2519,7 @@ BRUSH=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Con
 FBX=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
 FBXAnim=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
 GenericImport=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
-GenericExport=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
+GenericExport=E:/Game Projects/WoLDSimpleLevel/Content
 GenericOpen=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
 GenericSave=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
 MeshImportExport=../../../../../../Users/Dat Guy/Documents/GitHub/docs/Project/KeyStone/Content/
