--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ MRUItem6=/Game/DungeonLevel_MAZE_ADDED
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/Levels
 ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/Consumables
 ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Blueprints/BP_GREEN
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Maps
 None=======
 None=======
 None=======
@@ -230,28 +230,32 @@ None=======
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Player.Player
+OpenAssetsAtExit=/Game/MedievalDungeon/Blueprints/teleport.teleport
+OpenAssetsAtExit=/Game/MedievalDungeon/Blueprints/BP_EndLevel.BP_EndLevel
+OpenAssetsAtExit=/Game/MedievalDungeon/Maps/DungeonLevel.DungeonLevel:PersistentLevel.DungeonLevel
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem1=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_flyNormal
-MRUItem2=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_falling
-MRUItem3=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_deathHitTheGround
-MRUItem4=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_ClawsAttack2HitComboForward_RM
-MRUItem5=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_biteGrabThrow
-MRUItem6=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_ClawsAttack2HitComboForward
-MRUItem7=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_bite
-MRUItem8=/Game/Alexis/ThirdPersonBP/Blueprints/uihealthbar
-MRUItem9=/Game/Alexis/ThirdPersonBP/Ai/Animations/JumpAttack4UE4
-MRUItem10=/Game/Cemetery_VOL1/Meshes/SM_Cemetary_Gates_01c
-MRUItem11=/Game/Cemetery_VOL1/Meshes/SM_Cemetary_Gates_01f
-MRUItem12=/Game/Cemetery_VOL1/Meshes/SM_Cemetary_Gates_01g
-MRUItem13=/Game/Maps/Dummy
-MRUItem14=/Game/Tanner/Levels/MainMenuLevel
-MRUItem15=/Game/Alexis/AI/EnemyAiAttacks/Task/stanceChange
-MRUItem16=/Game/Alexis/AI/KnightBT
-MRUItem17=/Game/Alexis/AI/KnightAI_BP
-MRUItem18=/Game/NEW_DungeonLevel_TEST
-MRUItem19=/Game/Player
+MRUItem0=/Game/MedievalDungeon/Blueprints/BP_EndLevel
+MRUItem1=/Game/Player
+MRUItem2=/Game/MedievalDungeon/Blueprints/teleport
+MRUItem3=/Game/MedievalDungeon/Blueprints/BP_key
+MRUItem4=/Game/MedievalDungeon/Blueprints/BP_Openable_Door
+MRUItem5=/Game/MedievalDungeon/Blueprints/BP_Door_Single_Key
+MRUItem6=/Game/MedievalDungeon/Blueprints/BP_collectables
+MRUItem7=/Game/MedievalDungeon/Blueprints/BP_Locked_Cell_singleKey
+MRUItem8=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem9=/Game/MedievalDungeon/Blueprints/WIN
+MRUItem10=/Game/MedievalDungeon/Blueprints/BP_Candle_Holder
+MRUItem11=/Game/MedievalDungeon/Blueprints/BP_Candle_Used_A
+MRUItem12=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_flyNormal
+MRUItem13=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_falling
+MRUItem14=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_deathHitTheGround
+MRUItem15=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_ClawsAttack2HitComboForward_RM
+MRUItem16=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_biteGrabThrow
+MRUItem17=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_ClawsAttack2HitComboForward
+MRUItem18=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_bite
+MRUItem19=/Game/Alexis/ThirdPersonBP/Blueprints/uihealthbar
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -2111,6 +2115,23 @@ AnimSequence.File Path=True
 AnimSequence.CustomAttributes=True
 AnimSequence.MetaData=True
 AnimSequence.Thumbnail=True
+BP_Candle_Used_A_C.Tick=True
+BP_Candle_Used_A_C.Candle=True
+BP_Candle_Used_A_C.Replication=True
+BP_Candle_Used_A_C.Rendering=True
+BP_Candle_Used_A_C.Collision=True
+BP_Candle_Used_A_C.Actor=True
+BP_Candle_Used_A_C.Input=True
+BP_Candle_Holder_C.Tick=True
+BP_collectables_C.Default=True
+BP_Door_Single_Key_C.Tick=True
+BP_Door_Single_Key_C.Default=True
+teleport_C.Tick=True
+teleport_C.Default=True
+DungeonLevel_C.Tick=True
+DungeonLevel_C.Replication=True
+DungeonLevel_C.Actor=True
+DungeonLevel_C.Input=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Gargoyle_Statue_Stand.SM_Gargoyle_Statue_Stand;
@@ -2307,6 +2328,9 @@ None=======
 /Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_deathHitTheGround.ANIM_MOUNTAIN_DRAGON_deathHitTheGround=1
 /Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_falling.ANIM_MOUNTAIN_DRAGON_falling=1
 /Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_flyNormal.ANIM_MOUNTAIN_DRAGON_flyNormal=1
+/Game/MedievalDungeon/Blueprints/BP_Candle_Used_A.BP_Candle_Used_A=0
+/Game/MedievalDungeon/Blueprints/BP_Candle_Holder.BP_Candle_Holder=0
+/Game/MedievalDungeon/Blueprints/BP_EndLevel.BP_EndLevel=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2351,9 +2375,9 @@ ManaPotion_C=
 InventoryInst_C=
 InventoryInst_C="\"Object.InventoryData\" "
 GameInstance="\"Object.SeveragGameInst\" "
-GameInstance="\"Object.HasDragonSword\" "
+GameInstance="\"Object.CollectablesLeft\" "
 Object="\"Object.SeveragGameInst\" "
-Object="\"Object.SkeletalMeshes\" "
+Object=
 None=======
 None=======
 None=======
@@ -2373,28 +2397,28 @@ ActorComponent=
 Player_C=
 Player_C=
 Player_C=
-Player_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.Mesh.Object.Tags.ComponentTags\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Player_C="\"Object.Level_List\" "
 Character=
 Character=
 Character=
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.Mesh.Object.Tags.ComponentTags\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Character="\"Object.Level_List\" "
 Pawn=
 Pawn=
 Pawn=
 Pawn=
 Pawn=
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.Mesh.Object.Tags.ComponentTags\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Pawn="\"Object.Level_List\" "
 MySaveGame_C="\"Object.Save1Level\" "
 MySaveGame_C="\"Object.SkeletonHealth\" "
-MySaveGame_C="\"Object.HasDragonSword\" "
+MySaveGame_C="\"Object.DestroyPickups\" "
 SaveGame="\"Object.Save1Level\" "
 SaveGame="\"Object.SkeletonHealth\" "
 SaveGame="\"Object.Save1Level\" "
-SaveGame="\"Object.HasDragonSword\" "
+SaveGame="\"Object.DestroyPickups\" "
 InventoryWG_C="\"Object.InventorySlotArray\" "
 InventoryWG_C=
 LoadWidget_C="\"Object.As My Save Game\" "
-MyGameInstance_C="\"Object.HasDragonSword\" "
+MyGameInstance_C="\"Object.CollectablesLeft\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2454,8 +2478,8 @@ DamageBuffPotion_C=
 KnightAnim_BP_C="\"Object.knight\" "
 AnimInstance="\"Object.knight\" "
 CapsuleComponent=
-ShapeComponent=
-PrimitiveComponent=
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 SceneComponent=
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Tags.ComponentTags\" "
@@ -2472,6 +2496,8 @@ PointLight="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
 Light="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
 SphereComponent=
 Dragonslayer_C=
+BP_Openable_Door_C=
+BP_Locked_Cell_singleKey_C="\"Object.Open Angle\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
@@ -2493,7 +2519,7 @@ Texture2D.Compression=True
 
 [RootWindow]
 ScreenPosition=X=294.400 Y=134.400
-WindowSize=X=1323.200 Y=763.200
+WindowSize=X=1326.400 Y=766.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3509,7 +3535,7 @@ PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.Def
 InventoryInst_C=
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,SphereComponent.Collision.Collision,
 InventorySlotWG_C=
-Player_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,
+Player_C=
 MySaveGame_C=
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,SphereComponent.Collision.Collision,
 InventoryWG_C=
@@ -3545,7 +3571,7 @@ stanceChange_C=
 KnightController_C=
 completeSenses=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 SceneComponent=
-BP_Openable_Door_C=CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,
+BP_Openable_Door_C=
 BP_Locked_Cell_Multiple_Key_C=CapsuleComponent.Collision.Collision,
 ThirdPersonGameMode_1_C=
 SkeletonEnemy_C=CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
@@ -3579,7 +3605,7 @@ NewBlueprint_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.Defa
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.1.Textures,MaterialEditorInstanceConstant.ParameterGroups.Albedo,MaterialEditorInstanceConstant.ParameterGroups.Displacement,MaterialEditorInstanceConstant.ParameterGroups.Emissive,MaterialEditorInstanceConstant.ParameterGroups.Features,MaterialEditorInstanceConstant.ParameterGroups.General,MaterialEditorInstanceConstant.ParameterGroups.Normal,MaterialEditorInstanceConstant.ParameterGroups.Roughness,MaterialEditorInstanceConstant.ParameterGroups.Textures,
 BP_FireCoals_GREEN_C=CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 BP_collectables_C=
-BP_Locked_Cell_singleKey_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
+BP_Locked_Cell_singleKey_C=
 PrimitiveComponent=
 BP_Candle_GREEN_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 BP_Candle_Used_C_GREEN_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
