Documented code a bit better and added my final flow charts

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ MRUItem6=/Game/DungeonLevel_MAZE_ADDED
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/Levels
 ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/Consumables
 ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Blueprints/BP_GREEN
-ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Maps
+ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/Consumables
 None=======
 None=======
 None=======
@@ -224,38 +224,36 @@ AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/DungeonLevel_MAZE_ADDED
-LastLevel=/Game/MedievalDungeon/Maps/DungeonLevel
+LastLevel=/Game/NEW_DungeonLevel_TEST
 None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Player.Player
-OpenAssetsAtExit=/Game/MedievalDungeon/Blueprints/teleport.teleport
-OpenAssetsAtExit=/Game/MedievalDungeon/Blueprints/BP_EndLevel.BP_EndLevel
-OpenAssetsAtExit=/Game/MedievalDungeon/Maps/DungeonLevel.DungeonLevel:PersistentLevel.DungeonLevel
+OpenAssetsAtExit=/Game/InventorySystem/Consumables/TalentToken.TalentToken
+OpenAssetsAtExit=/Game/InventorySystem/Consumables/StaminaRegePotion.StaminaRegePotion
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MedievalDungeon/Blueprints/BP_EndLevel
-MRUItem1=/Game/Player
-MRUItem2=/Game/MedievalDungeon/Blueprints/teleport
-MRUItem3=/Game/MedievalDungeon/Blueprints/BP_key
-MRUItem4=/Game/MedievalDungeon/Blueprints/BP_Openable_Door
-MRUItem5=/Game/MedievalDungeon/Blueprints/BP_Door_Single_Key
-MRUItem6=/Game/MedievalDungeon/Blueprints/BP_collectables
-MRUItem7=/Game/MedievalDungeon/Blueprints/BP_Locked_Cell_singleKey
-MRUItem8=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem9=/Game/MedievalDungeon/Blueprints/WIN
-MRUItem10=/Game/MedievalDungeon/Blueprints/BP_Candle_Holder
-MRUItem11=/Game/MedievalDungeon/Blueprints/BP_Candle_Used_A
-MRUItem12=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_flyNormal
-MRUItem13=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_falling
-MRUItem14=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_deathHitTheGround
-MRUItem15=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_ClawsAttack2HitComboForward_RM
-MRUItem16=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_biteGrabThrow
-MRUItem17=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_ClawsAttack2HitComboForward
-MRUItem18=/Game/QuadrapedCreatures/MountainDragon/Animations/ANIM_MOUNTAIN_DRAGON_bite
-MRUItem19=/Game/Alexis/ThirdPersonBP/Blueprints/uihealthbar
+MRUItem0=/Game/Player
+MRUItem1=/Game/InventorySystem/Consumables/TalentToken
+MRUItem2=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem3=/Game/InventorySystem/Consumables/StaminaRegePotion
+MRUItem4=/Game/InventorySystem/Consumables/DamageBuffPotion
+MRUItem5=/Game/InventorySystem/Chest/WorkingChest1
+MRUItem6=/Game/InventorySystem/UI/ChestInventoryWG
+MRUItem7=/Game/InventorySystem/UI/ChestSlotWG
+MRUItem8=/Game/InventorySystem/UI/InventorySlotWG
+MRUItem9=/Game/InventorySystem/UI/InventoryWG
+MRUItem10=/Game/MedievalDungeon/Blueprints/BP_EndLevel
+MRUItem11=/Game/MedievalDungeon/Blueprints/teleport
+MRUItem12=/Game/MedievalDungeon/Blueprints/BP_key
+MRUItem13=/Game/MedievalDungeon/Blueprints/BP_Openable_Door
+MRUItem14=/Game/MedievalDungeon/Blueprints/BP_Door_Single_Key
+MRUItem15=/Game/MedievalDungeon/Blueprints/BP_collectables
+MRUItem16=/Game/MedievalDungeon/Blueprints/BP_Locked_Cell_singleKey
+MRUItem17=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem18=/Game/MedievalDungeon/Blueprints/WIN
+MRUItem19=/Game/MedievalDungeon/Blueprints/BP_Candle_Holder
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -2272,7 +2270,7 @@ None=======
 /Game/InventorySystem/Struct_ItemInfo.Struct_ItemInfo=1
 /Game/InventorySystem/Consumables/StaminaPotion.StaminaPotion=1
 /Game/InventorySystem/UI/ChestInventoryWG.ChestInventoryWG=1
-/Game/InventorySystem/UI/ChestSlotWG.ChestSlotWG=1
+/Game/InventorySystem/UI/ChestSlotWG.ChestSlotWG=0
 /Game/InventorySystem/UI/PickupWG.PickupWG=1
 /Game/InventorySystem/UI/UseDropWG.UseDropWG=1
 /Game/Evan/KeystoneImport/Dragonslayer.Dragonslayer=1
@@ -2301,7 +2299,7 @@ None=======
 /Game/MedievalDungeon/Blueprints/TEST.TEST=0
 /Game/MedievalDungeon/Blueprints/BP_Door_SingleKey.BP_Door_SingleKey=0
 /Game/InventorySystem/Consumables/StaminaRegePotion.StaminaRegePotion=1
-/Game/InventorySystem/Consumables/DamageBuffPotion.DamageBuffPotion=1
+/Game/InventorySystem/Consumables/DamageBuffPotion.DamageBuffPotion=0
 /Game/MedievalDungeon/Blueprints/BP_Openable_Door.BP_Openable_Door=0
 /Game/MedievalDungeon/Blueprints/BP_key.BP_key=0
 /Game/Alexis/AI/patrolPath.PatrolPath=1
@@ -2390,24 +2388,24 @@ None=======
 None=======
 InventorySlotWG_C=
 UserWidget=
-Widget="\"Object.Appearance.Font\" "
-Visual="\"Object.Appearance.Font\" "
+Widget=
+Visual=
 InventoryComponent_C="\"Object.Inventory\" "
 ActorComponent=
 Player_C=
 Player_C=
 Player_C=
-Player_C="\"Object.Level_List\" "
+Player_C="\"Object.canUseUI\" "
 Character=
 Character=
 Character=
-Character="\"Object.Level_List\" "
+Character="\"Object.canUseUI\" "
 Pawn=
 Pawn=
 Pawn=
 Pawn=
 Pawn=
-Pawn="\"Object.Level_List\" "
+Pawn="\"Object.canUseUI\" "
 MySaveGame_C="\"Object.Save1Level\" "
 MySaveGame_C="\"Object.SkeletonHealth\" "
 MySaveGame_C="\"Object.DestroyPickups\" "
@@ -2518,8 +2516,8 @@ Texture2D.Texture=True
 Texture2D.Compression=True
 
 [RootWindow]
-ScreenPosition=X=294.400 Y=134.400
-WindowSize=X=1326.400 Y=766.400
+ScreenPosition=X=571.200 Y=210.400
+WindowSize=X=1328.000 Y=768.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
